# matrix_calculator

./: .gitignore  .tasks  CMakeLists.txt  README.md
cmake/: FindNVTX.cmake
include/: matrix.cuh  matrix.h
src/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.cu  matrix_add.cu
test/: CMakeLists.txt  matrix_test.cpp  matrix_test.cu
